feat: :sparkles: Agregada funcionalidad para el sistema escolar
:card_file_box: Agregada migración con las tablas del sistema escolar
:memo: Actualizado el archivo de OpenAPI con los nuevos endpoints
:necktie: Agregados modelos y controladores para el sistema escolar
